# sentinel-rag

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  architecture.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_sentinel.bat  run_sentinel_v5.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  lint.yml  security.yml
assets/: README.md
configs/: __init__.py  settings.py
data/: README.md  attack_dataset.json
data/clean/: clean_0.txt
data/poisoned/: context_ignore_0.txt  context_ignore_1.txt  context_ignore_2.txt  context_ignore_3.txt  escape_char_0.txt  escape_char_2.txt  escape_char_3.txt  fake_completion_1.txt  naive_1.txt  naive_3.txt
data/samples/: sample_attack_fake_completion.txt
docs/: api.md  architecture.md  benchmarks.md  development.md  installation.md  usage.md
docs/images/: README.md
docs/screenshots/: README.md
examples/: quickstart.py
scripts/: analyze_deepset_failures.py  baseline_comparison.py  benchmark_latency.py  compare_spotlighting.py  create_poisoned_pdf.py  create_review_demo_pdfs.py  demo.py  demo_full_e2e.py  demo_pdf.py  evaluate.py  evaluate_deepset.py  evaluate_large.py  finetune_model.py  generate_attacks.py  generate_large_dataset.py  quick_demo.py  status.py
sentinel-rag/: .gitignore  README.md  requirements.txt  test_detector.py  test_neutralizer.py  test_setup.py
sentinel-rag/data/: large_attack_dataset.json
sentinel-rag/scripts/: analyze_deepset_failures.py  baseline_comparison.py  benchmark_latency.py  compare_spotlighting.py  create_poisoned_pdf.py  create_review_demo_pdfs.py  demo.py  demo_full_e2e.py  demo_pdf.py  (+8 more)
src/: __init__.py  main.py
tests/: test_detector.py  test_e2e.py  test_neutralizer.py  test_pipeline.py  test_setup.py
(+45 files in other folders)
