[project]
name = "sentinel-rag"
version = "1.0.0"
description = "Mitigating indirect prompt injection in RAG pipelines via detection and semantic neutralization"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Chidhvilasa Yepuri" }]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.black]
line-length = 100
target-version = ["py310"]
